fix ingredient entry line wrapping bug

--- a/client/src/format/IngredientListEntry.css
+++ b/client/src/format/IngredientListEntry.css
@@ -3,6 +3,7 @@
     margin: 2px 0px 0px 0px;
     font-size: 19px;
     font-weight: 300;
+    text-align: center;
 }
 
 .ingredient-use-count {
